chore: Update compiler options and include paths
- Update module setting to ESNext in tsconfig.json and tsconfig.test.json.
- Add src directory to include paths in both tsconfig.json and tsconfig.test.json.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,17 @@
 {
   "compilerOptions": {
     "target": "ESNext",
-    "module": "commonjs",
+    "module": "ESNext",
     "outDir": "./lib",
     "rootDir": "./src",
     "strict": true,
     "esModuleInterop": true,
     "declaration": true
   },
+  "include": [
+    "src",
+  ],
   "exclude": [
-    "test",
     "lib"
   ]
 }
